add notifier
